Update director service.
